# InvestNote

./: README.md  pyproject.toml  scraper.py
.github/workflows/: main.yml
app/api/: app.py
app/core/: config.py
app/services/: tavily_service.py  telegram_services.py
